--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5"
   }
